blocks/flip-cards/flip-cards.css
.flip-cards {
  display: grid;
  gap: 43px;
  margin: 4px 0;
  font-size: var(--body-font-size-default-m);
}

.flip-cards .wrapper {
  text-decoration: none;
}

.flip-cards img {
  width: 100%;
  filter: none;
}

.flip-cards.light img {
  filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%) contrast(100%);
}

.flip-cards.dark img{
  filter: none;
}

.flip-cards > .wrapper > div > div:first-child .icon {
  width: 60px;
  height: auto;
}

/* eyebrow styling */
.flip-cards > .wrapper .button-container.eyebrow {
  display: none;
}

.flip-cards > .wrapper .eyebrow p {
  background-color: var(--color-accent-3);
  border-radius: 4px;
  margin-bottom: 8px;
  padding: 8px 16px;
  width: fit-content;
  font-size: var(--body-font-size-xs);
  font-weight: var(--font-weight-extra-bold);
  text-transform: uppercase;
  letter-spacing: 1.4px;
  color: var(--color-white);
}


.flip-cards > .wrapper > div {
  background: var(--color-bg-tertiary);
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
  padding: 32px;
  border-radius: 12px;
  height: 452px;
}

.flip-cards.light > .wrapper > div {
  background: var(--color-grey200);
}

.flip-cards.dark > .wrapper > div {
  background: var(--color-bg-tertiary);
}

.flip-cards > .wrapper > div > div:last-of-type {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 8px;
}

.flip-cards > .wrapper > div .clamp-title {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 0;
}

.flip-cards > .wrapper > div .clamp-description {
  display: -webkit-box;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.flip-cards > .wrapper > div .clamp-title, .flip-cards > .wrapper > div .clamp-description {
  color: var(--color-text-tertiary);
}

.flip-cards.dark > .wrapper > div .clamp-title, .flip-cards.dark > .wrapper > div .clamp-description {
  color: var(--color-text-tertiary);
}

.flip-cards.light > .wrapper > div .clamp-title, .flip-cards.light > .wrapper > div .clamp-description {
  color: var(--color-text);
}

.flip-cards > .wrapper > div a.button {
  margin: 8px 0 0;
}

@media (min-width: 992px /* breakpoint-l */) {
  .flip-cards {
    display: flex;
    gap: 8px;
  }

  .flip-cards > .wrapper {
    flex: 1;
  }

  .flip-cards > .wrapper > div {
    height: 420px;
  }

  .flip-cards.flip-cards-4-cols > .wrapper > div {
    height: 472px;
  }
}

/* stylelint-disable-next-line no-descending-specificity */
main .section.flip-cards-container {
  padding: 32px 0;
}

main .section.flip-cards-container.light-background {
  padding-top: 0;
}

/* stylelint-disable-next-line no-descending-specificity */
main .section.flip-cards-container > .flip-cards-wrapper {
  padding: 0 32px;
}

main .section.flip-cards-container > div.flip-cards-wrapper {
  margin-bottom: 0;
  margin-top: 0;
}

